projects/vb6parse/snapshots/syntax/statements/file_operations/write/write_sequential_values.snap
---
source: projects/vb6parse/src/syntax/statements/file_operations/write.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: ForStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: ForKeyword
                  text: For
                - kind: Whitespace
                  text: " "
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: i
                - kind: Whitespace
                  text: " "
                - kind: EqualityOperator
                  text: "="
                - kind: Whitespace
                  text: " "
                - kind: NumericLiteralExpression
                  children:
                    - kind: IntegerLiteral
                      text: "1"
                - kind: Whitespace
                  text: " "
                - kind: ToKeyword
                  text: To
                - kind: Whitespace
                  text: " "
                - kind: NumericLiteralExpression
                  children:
                    - kind: IntegerLiteral
                      text: "100"
                - kind: Newline
                  text: "\n"
                - kind: StatementList
                  children:
                    - kind: WriteStatement
                      children:
                        - kind: Whitespace
                          text: "        "
                        - kind: WriteKeyword
                          text: Write
                        - kind: Whitespace
                          text: " "
                        - kind: IdentifierExpression
                          children:
                            - kind: Octothorpe
                              text: "#"
                            - kind: IntegerLiteral
                              text: "1"
                        - kind: Comma
                          text: ","
                        - kind: Whitespace
                          text: " "
                        - kind: ArgumentList
                          children:
                            - kind: Argument
                              children:
                                - kind: IdentifierExpression
                                  children:
                                    - kind: Identifier
                                      text: i
                            - kind: Comma
                              text: ","
                            - kind: Whitespace
                              text: " "
                            - kind: Argument
                              children:
                                - kind: BinaryExpression
                                  children:
                                    - kind: IdentifierExpression
                                      children:
                                        - kind: Identifier
                                          text: i
                                    - kind: Whitespace
                                      text: " "
                                    - kind: MultiplicationOperator
                                      text: "*"
                                    - kind: Whitespace
                                      text: " "
                                    - kind: NumericLiteralExpression
                                      children:
                                        - kind: IntegerLiteral
                                          text: "2"
                            - kind: Comma
                              text: ","
                            - kind: Whitespace
                              text: " "
                            - kind: Argument
                              children:
                                - kind: BinaryExpression
                                  children:
                                    - kind: IdentifierExpression
                                      children:
                                        - kind: Identifier
                                          text: i
                                    - kind: Whitespace
                                      text: " "
                                    - kind: ExponentiationOperator
                                      text: ^
                                    - kind: Whitespace
                                      text: " "
                                    - kind: NumericLiteralExpression
                                      children:
                                        - kind: IntegerLiteral
                                          text: "2"
                    - kind: Newline
                      text: "\n"
                    - kind: Whitespace
                      text: "    "
                - kind: NextKeyword
                  text: Next
                - kind: Whitespace
                  text: " "
                - kind: Identifier
                  text: i
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
